--- a/Memoria.tex
+++ b/Memoria.tex
@@ -11,6 +11,7 @@
 
 \usepackage{graphicx}%para imagenes
 \graphicspath{ {img/} }
+\usepackage{url}
 
 \usepackage{varwidth} % cajas
 
@@ -68,5 +69,18 @@
 \include{2-objetivos}
 \include{3-infraestructura-software}
 \include{4-solucion}
+
+
+\begin{thebibliography}{99}
+
+\bibitem{ArDroneServer} Mediawiki de Alberto Martin (ArDroneServer) \url{http://jderobot.org/Amartinflorido-tfg}
+\bibitem{surveillance4.0} Mediawiki Daniel Castellano (Surveillance 4.0) \url{http://jderobot.org/D.castellanob-pfc} 
+\bibitem{surveillance5.1} Mediawiki Edgar Barrero (Surveillance 5.1) \url{http://jderobot.org/Aerobeat-colab}
+\bibitem{teleoperadoresyvisoresweb} Mediawiki Aitor Martínez \url{http://jderobot.org/Aitormf-tfg}
+
+\end{thebibliography} 
+
+
+
 
 \end{document}
